# CodeRepairRL-Paper

./: .gitignore  .latexindent.yaml  .latexmkrc  AGENTS.md  CLAUDE.md  Makefile  PLAN.md  README.md  TODO.md  datasets.md  main.tex  minutes.md  references.bib
figures/: placeholder-figures.tex
plotting/: README.md  __init__.py  plot_config.py  pyproject.toml  requirements.txt  wandb_utils.py
plotting/figures/: placeholder-figures.tex
plotting/plots/: analyze_cached_files.py  analyze_python_commands.py  analyze_rm_git_correlation.py  analyze_rm_rf_pattern.py  analyze_termination_steps.py  check_all_long_runs.py  check_table_rows.py  command_evolution_sankey.py  comprehensive_cached_rm_check.py  comprehensive_rm_analysis.py  comprehensive_rm_check.py  explore_metrics.py  extract_actual_commands.py  find_long_runs.py  find_rm_rf_in_tables.py  template.py  verify_table_structure.py
plotting/scripts/: __init__.py  command_evolution_sankey.py  command_trend_direct.py  episode_length_analysis.py  individual_problem_analysis.py  kl_over_time.py  language_reward_epoch_comparison.py  language_reward_histogram.py  length_comparison.py  loss_over_time.py  merge_runs.py  multilingual_reward_progression.py  reward_comparison.py  reward_components.py  reward_curve.py  reward_over_time.py  template.py  temporal_analysis.py  tool_calls_over_time.py  tool_success_comparison.py  tool_success_rates.py
plotting/scripts/analysis/: analyze_rm_exploitation.py
plotting/scripts/debugging/: test_parsing.py  test_table_parsing.py
plotting/utils/: __init__.py  table_parser.py
(+27 files in other folders)
